3 files modified, 2 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 <hello name="{{ name }}"></hello>
+
+<h2 >{{ message }} </h2>
+
+
+
 <p>
   Start editing to see some magic happen :)
+
 </p>
+
+<app-test-comp></app-test-comp>
